--- a/src/styles/globalStyles.css
+++ b/src/styles/globalStyles.css
@@ -8,6 +8,7 @@ body {
   padding: 0;
   box-sizing: border-box;
   color: #ffffff;
+  font-family: 'Mulish', sans-serif;
 }
 html {
   overflow-x: hidden;
